  lack the GNU extension mentioned previously, and where ordinary numeric
  modes do not preserve directory setuid and setgid bits.

  dd now accepts the count_bytes, skip_bytes iflags and the seek_bytes
  oflag, to more easily allow processing portions of a file.

  dd now accepts the conv=sparse flag to attempt to create sparse
  output, by seeking rather than writing to the output file.

  split now accepts an optional "from" argument to --numeric-suffixes,
  which changes the start number from the default of 0.

  split now accepts the --additional-suffix option, to append an
  additional static suffix to output file names.

  basename now supports the -a and -s options, which allow processing
  of more than one argument at a time.  Also the complementary
  -z option was added to delimit output items with the NUL character.

  dirname now supports more than one argument.  Also the complementary
  -z option was added to delimit output items with the NUL character.

** Bug fixes

  du --one-file-system (-x) would ignore any non-directory specified on
  the command line.  For example, "touch f; du -x f" would print nothing.
  [bug introduced in coreutils-8.15]

  mv now lets you move a symlink onto a same-inode destination file that
  has two or more hard links.  Before, it would reject that, saying that
  they are the same, implicitly warning you that the move would result in
  data loss.  In this unusual case, when not moving the symlink onto its
  referent, there is no risk of data loss, since the symlink will
  typically still point to one of the hard links.

  "mv A B" could succeed, yet A would remain.  This would happen only when
  both A and B were hard links to the same symlink, and with a kernel for
  which rename("A","B") does nothing and returns 0 (POSIX mandates this
  surprising rename no-op behavior).  Now, mv handles this case by skipping
  the usually-useless rename and simply unlinking A.
