@@ -25,6 +25,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   dd now accepts the conv=sparse flag to attempt to create sparse
   output, by seeking rather than writing to the output file.
 
+  ln now accepts the --relative option, to generate a relative
+  symbolic link to a target, irrespective of how the target is specified.
+
   split now accepts an optional "from" argument to --numeric-suffixes,
   which changes the start number from the default of 0.
 
